// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanSavePanel /> Match Snapshot 1`] = `
<div
  className="panel-save"
>
  <h2
    style={
      Object {
        "color": "white",
      }
    }
  >
    Save Plan
  </h2>
  <div
    className="panel-save-inner"
  >
    <form>
      <ReactList
        axis="y"
        itemRenderer={[Function]}
        itemsRenderer={[Function]}
        length={1}
        minSize={1}
        pageSize={10}
        scrollParentGetter={[Function]}
        scrollParentViewportSizeGetter={[Function]}
        threshold={100}
        type="uniform"
        useStaticSize={false}
        useTranslate3d={false}
      />
    </form>
  </div>
  <div
    className="col-sm-12"
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <input
      className="form-control input-large"
      maxLength={28}
      onChange={[Function]}
      placeholder="Filename (without extension)"
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 3,
          "color": "black",
          "height": 35,
        }
      }
      type="text"
    />
  </div>
  <div
    className="container"
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <div
      className="text-center"
    >
      <button
        className="btn btn-group-2 btn-cancel"
        id="cancel-save"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <button
        className="btn btn-group-2 btn-green"
        id="save-btn"
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<PlanSavePanel /> Renders Items 1`] = `
<ReactList
  axis="y"
  itemRenderer={[Function]}
  itemsRenderer={[Function]}
  length={1}
  minSize={1}
  pageSize={10}
  scrollParentGetter={[Function]}
  scrollParentViewportSizeGetter={[Function]}
  threshold={100}
  type="uniform"
  useStaticSize={false}
  useTranslate3d={false}
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitTransform": "translate(0px, 0px)",
          "msTransform": "translate(0px, 0px)",
          "transform": "translate(0px, 0px)",
        }
      }
    >
      <div>
        <div
          className="container"
          key="0"
          style={
            Object {
              "paddingTop": "5px",
            }
          }
        >
          <div
            className="btn-group d-flex"
            style={
              Object {
                "marginLeft": "0px",
              }
            }
          >
            <button
              className="btn btn-light w-100 btn-small"
              style={
                Object {
                  "color": "black",
                }
              }
              type="button"
            >
              Test
            </button>
            <button
              className="btn btn-danger btn-small"
              onClick={[Function]}
              type="button"
            >
              X
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</ReactList>
`;
